Issue ekstep/Collection-Editor#1 fix: header alignment issue

--- a/org.ekstep.collectioneditor-1.0/editor/collectioneditor.css
+++ b/org.ekstep.collectioneditor-1.0/editor/collectioneditor.css
@@ -20,8 +20,7 @@ body {
 
 .header-wrapper .custom-container {
     margin: 0!important;
-    min-width: 100vw!important;
-    margin-left: -1em!important;
+    min-width: 97.8vw!important;
     border-bottom: 0.2px solid rgba(128, 128, 128, 0.43);
 }
 
