--- a/org.ekstep.collectioneditor-1.0/editor/header.css
+++ b/org.ekstep.collectioneditor-1.0/editor/header.css
@@ -58,11 +58,11 @@ body {
 .custom-container .one.wide.column,
 .custom-container .six.wide.column,
 .custom-container .five.wide.column {
-    height: 55px !important;
+    height: 100%!important;
 }
 
 .custom-container .one.wide.column {
-    width: 60px !important;
+    width: 70px !important;
 }
 
 .custom-container .five.wide.column {
@@ -73,7 +73,9 @@ body {
 }
 
 .content-masterhead {
-    padding: 0 !important;
+    padding: 0px !important;
+    width: 98vw !important;
+    height: 60px !important;
 }
 
 .custom-1-wide {
