--- a/org.ekstep.contentmeta-1.0/editor/contentmeta.css
+++ b/org.ekstep.contentmeta-1.0/editor/contentmeta.css
@@ -209,6 +209,7 @@
     box-sizing: border-box;
     padding: 1em!important;
     position: relative;
+    padding-left: 0!important;
 }
 
 .metacontent-field {
